bin_PROGRAMS = aprscreate
aprscreate_SOURCES = \
                     App.cpp \
                     DBI.cpp \
                     Decay.cpp \
                     main.cpp \
                     MemcachedController.cpp \
                     Store.cpp \
                     Worker.cpp

aprscreate_LDFLAGS=-export-dynamic -lmysqlpp
